Customer Driver Add API
